[package]
name = "plug"
version = "0.1.0-dev"
edition = "2024"
description = "A library for type-safe interprocess communication"
license = "MIT"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "deny"
unused_results = "deny"

[lints.clippy]
type-complexity = "allow"

[dependencies]
serde_json = "1"

serde.version = "1"
serde.features = ["derive"]

tokio.version = "1"
tokio.features = ["io-util", "net"]
