[package]
name = "plug"
version = "0.1.0-dev"
edition = "2024"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
license = "MIT"
repository = "https://github.com/hecrj/plug"
description = "A library for type-safe interprocess communication"
categories = ["network-programming", "asynchronous"]
keywords = ["interprocess", "communication", "type-safe"]

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "deny"
unused_results = "deny"

[lints.clippy]
type-complexity = "allow"

[dependencies]
serde_json = "1"

serde.version = "1"
serde.features = ["derive"]

tokio.version = "1"
tokio.features = ["io-util", "net"]
